Closed Bug 387548 Opened 18 years ago Closed 18 years ago

History dropdown from location bar can be too short

Categories

(Core :: XUL, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: sgautherie, Assigned: enndeakin)

References

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

Full length: [Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a7pre) Gecko/200707040303 SeaMonkey/2.0a1pre] (nightly) (W2Ksp4) Short length: [Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a7pre) Gecko/200707050303 SeaMonkey/2.0a1pre] (nightly) (W2Ksp4) Simple steps: 1. Start SeaMonkey Browser with new profile. 2. Click on location bar dropdown arrow. 2e. See that the history dropdown displays very short, instead of the full length of the location bar. <http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=MozillaTinderboxAll&branch=HEAD&branchtype=match&sortby=Date&hours=2&date=explicit&mindate=20070704+03&maxdate=20070705+04&cvsroot=%2Fcvsroot> My guess: bug 279703 (neilD).
What used to happen was that we pass the URL bar as the first parameter of showPopup and as it has the sizetopopup="pref" attribute we actually ended up sizing the popup to the URL bar. I guess we have to do that manually now?
sizetopopup doesn't have any effect on the size of the popup, it only affects the enclosing <menu>. I can't see any menu being used in the autocomplete widget.
IIRC, this dropdown is not generated by the autocomplete widget, but by the SeaMonkey urlbar widget itself.
Attached patch bah (obsolete) — Splinter Review
The autocomplete widget was relying on some behaviour that I don't think was expected to work. A simple patch will 'fix' this but it seems a bit wrong for a 'sizetopopup' attribute on any element to affect the popup size in a secondary way, but not use the main purpose of 'sizetopopup' to set the size of anchor. Thoughts?
Assignee: general → enndeakin
Status: NEW → ASSIGNED
Attachment #272671 - Attachment is obsolete: true
Attachment #272682 - Flags: superreview?(bzbarsky)
Attachment #272682 - Flags: review?(bzbarsky)
Comment on attachment 272682 [details] [diff] [review] This version does this without crashing I can certainly live with this code-wise. Whether we want this as part of XUL... it seems convenient, no?
Attachment #272682 - Flags: superreview?(bzbarsky)
Attachment #272682 - Flags: superreview+
Attachment #272682 - Flags: review?(bzbarsky)
Attachment #272682 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
verified that this does fix the SeaMonkey urlbar popup
Status: RESOLVED → VERIFIED
[Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a7pre) Gecko/200707181212 SeaMonkey/2.0a1pre] (nightly) (W2Ksp4) Confirming V.F., as reporter.
Component: General → XP Toolkit/Widgets: Menus
OS: Windows 2000 → All
Product: Mozilla Application Suite → Core
Hardware: PC → All
Component: XP Toolkit/Widgets: Menus → XUL
QA Contact: general → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: