Bug 387548, use sizetopopup to set popup size when an anchor is used, fixes wrong size on seamonkey autocomplete field, r+sr=bz