layout/xul/base/src/nsMenuPopupFrame.cpp
@@ -860,7 +860,8 @@ nsMenuPopupFrame::SetPopupPosition(nsIFrame* aAnchorFrame)
     if (!aAnchorFrame)
       return NS_OK;
   }
-  else {
+
+  if (aAnchorFrame->GetContent()) {
     // the popup should be the same size as the anchor menu, for example, a menulist.
     sizedToPopup = nsMenuFrame::IsSizedToPopup(aAnchorFrame->GetContent(), PR_FALSE);
   }
